fixed flex to eliminate white space

--- a/css/styles.css
+++ b/css/styles.css
@@ -25,6 +25,12 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   min-height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+main {
+  flex: 1;
 }
 
 img, svg {
